--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mastering Asynchronous JavaScript: Callbacks, Promises, and Async/Await"
-publishedAt: "2024-06-18"
+publishedAt: "Noveber 24, 2024"
 summary: "A deep dive into asynchronous JavaScript, explaining callbacks, promises, and async/await with real-world examples and practical patterns for modern web development."
 tags: ["javascript", "web development", "async programming"]
 ---
