blogs date changes

--- a/content/new.mdx
+++ b/content/new.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Front-End Performance Optimization: Techniques for Lightning-Fast Web Applications"
-publishedAt: "March 03, 2025"
+publishedAt: "2025-03-07"
 summary: "Learn practical techniques to dramatically improve your web application's front-end performance, from code splitting to rendering optimizations."
 tags: ["web performance", "front-end development", "optimization", "user experience"]
 ---
